openshift/v1-0/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: golang-demo-service-gateway
  namespace: golang-demo
spec:
  servers:
    - hosts:
        - chat.leanhtuan.org
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
