openshift/v1-0/DR.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: golang-demo-service
  namespace: golang-demo
  labels:
    kiali_wizard: weighted_routing
spec:
  host: golang-demo-service.golang-demo.svc.cluster.local
  subsets:
    - labels:
        version: '10'
      name: '10'
